Add listening history
